added gesture Methods and app apk